give buildings correct vh units and alignment

--- a/001_1984/style.css
+++ b/001_1984/style.css
@@ -15,6 +15,8 @@
   #cover {
     display: grid;
     grid-template-columns: repeat(14, 1fr);  
+    grid-template-rows: 1fr;
+    align-items: end;
     height: 100vh;
       background: #455179;
   }
@@ -25,37 +27,56 @@
 
   #sky {
     grid-column: 6/15;
+    grid-row: -1/1;
+    height: 100vh;
     background: #455179;
-    
+    z-index: 1;
   }
 
   #yellow-building {
       grid-column: 1/6;
+      grid-row: -1/1;
+      height: 100vh;
       background: #F5BE2C;
-      
+      z-index: 2;
   }
 
   #black-building {
       grid-column: 9/15;
+      grid-row-start: 1;
+      height: 83vh;
       background: #241721;
+      z-index: 3;
   }
 
   #red-building {
       grid-column: 4/10;
+      grid-row-start: 1;
+      height: 70vh;
       background: #912026;
+      z-index: 4;
   }
 
   #green-building {
       grid-column: 1/5;
+      grid-row-start: 1;
+      height: 35vh;
       background: #6F6842;
+      z-index: 5;
   }
 
   #cream-building {
       grid-column: 13/15;
+      grid-row-start: 1;
+      height: 28vh;
       background: #F8C782;
+      z-index: 6;
   }
 
   #black-red-building {
       grid-column: 7/13;
+      grid-row-start: 1;
+      height: 17vh;
       background: #19111D;
+      z-index: 6;
   }
